R02: Adicionando paragrafo com id 'carta-gerada' e adicionando uma box com position absolute no html com altura 1366 e largura 768 para facilitar visualizaçao do conteudo na resolucao indicada mesmo fora da extensao recomendada.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="box"></div>
   <label for="carta-texto">Insira o texto:</label>
   <input type="text" name="carta-texto" id="carta-texto">
+  <p id="carta-gerada"></p>
 
   <script src="script.js"></script>
 </body>
