--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
 </head>
 <body>
   <div id="box"></div>
-  <label for="carta-texto">Insira o texto:</label>
-  <input type="text" name="carta-texto" id="carta-texto">
-  <p id="carta-gerada"></p>
+  <main>
+    <div id="input-div">
+      <label for="carta-texto">Insira o texto:</label>
+      <input type="text" name="carta-texto" id="carta-texto">
+      <button id="criar-carta">Gerar carta!</button>
+    </div>
+    
+    <p id="carta-gerada"></p>
+  </main>
+  
 
   <script src="script.js"></script>
 </body>
