Corrigindo o requisito 18 que pedia apenas a quantidade de palavras em #carta-contador; criaçao de um paragrafo anterior para inserir o texto 'quantidade de palavras'; retirada da div '.box' usada como referencia espacial; display: flex em '.counter-container'.

--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
   <title>Project Mistery Letter</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <div id="box"></div>
+<body>  
   <main>
     <div id="input-div">
       <label for="carta-texto">Insira o texto:</label>
       <input type="text" name="carta-texto" id="carta-texto">
       <button id="criar-carta">Gerar carta!</button>
     </div>
-    
     <p id="carta-gerada"></p>
-    <p id="carta-contador"></p>
-  </main>
-  
+    <footer class="counter-container">      
+      <p class="before-contador">Quantidade de palavras:</p>
+      <p id="carta-contador"></p>
+    </div>
+    
+  </main>  
 
   <script src="script.js"></script>
 </body>
