Alterando os arquivos '.eslintignore' -> 'eslintignore' e '.eslintrc.json' -> 'eslintrc.json'.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p class="before-contador">Quantidade de palavras:</p>
       <p id="carta-contador"></p>
     </div>
-    
+    </footer>
   </main>  
 
   <script src="script.js"></script>
